--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.5",
+    "firebase": "^6.6.0",
+    "firebase-admin": "^8.5.0",
+    "firebase-functions": "^3.2.0",
     "heroku": "^7.29.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -23,6 +26,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "engines": {
+    "node": "10"
   },
   "browserslist": {
     "production": [
