--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-scripts-ts": "^3.1.0",
     "react-transition-group": "^4.3.0",
     "styled": "^1.0.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
