--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
