--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/node": "^12.7.7",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/react-transition-group": "^4.2.2",
+    "@types/styled-components": "^4.1.19",
     "bulma": "^0.7.5",
     "firebase": "^6.6.0",
     "firebase-admin": "^8.5.0",
@@ -22,7 +24,7 @@
     "react-scripts-ts": "^3.1.0",
     "react-transition-group": "^4.3.0",
     "styled": "^1.0.0",
-    "styled-components": "^4.3.2",
+    "styled-components": "^4.4.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
