--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^12.7.7",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/react-router-dom": "^5.1.0",
     "@types/react-transition-group": "^4.2.2",
     "@types/styled-components": "^4.1.19",
     "bulma": "^0.7.5",
